--- a/_includes/themes/zeppelin/_navigation.html
+++ b/_includes/themes/zeppelin/_navigation.html
@@ -93,7 +93,6 @@
     </div>
   </div>
 </div>
-
-{% include_relative advertise.md %}
+{% include_relative technologies_deployments.md %}
 {% include_relative whats_new.md %}
 {% endif %}
