change from padding to padding-top in bottom-text

--- a/assets/themes/zeppelin/css/style.css
+++ b/assets/themes/zeppelin/css/style.css
@@ -1413,7 +1413,7 @@ and (max-width: 631px) {
   color: gray;
   font-weight: 200;
   font-style: italic;
-  padding: 15px;
+  padding-top: 15px;
 }
 
 .tech_deploy .section {
