fix: navbar bugs, improve: main section and what's new section

--- a/_includes/themes/zeppelin/_navigation.html
+++ b/_includes/themes/zeppelin/_navigation.html
@@ -66,14 +66,17 @@
 
 {% if page.title == "Zeppelin" %}
 <div class="jumbotron">
-  <div class="container" style="margin-top: -45px; padding-bottom: 5px;">
-    <div class="zeppelin">
-        <div class="zeppelin2"></div>
-    </div>
+  <div class="container" style="padding-bottom: 5px;">
     <div>
+      <div class="zeppelin">
+        <div class="zeppelin2"></div>
+      </div>
+    </div>
+    <div style="margin-top: -250px; position: relative;">
+      <h1 style="font-size:40px;">Apache Zeppelin</h1>
       <p class="description">
-      A web-based notebook that enables interactive data analytics for
-      data-driven, interactive and collaborative documents with SQL, Scala and more.
+        A web-based notebook that enables interactive data analytics for
+        data-driven, interactive and collaborative documents with SQL, Scala and more.
       </p>
     </div>
     <div class="border row">
