--- a/_includes/themes/zeppelin/_navigation.html
+++ b/_includes/themes/zeppelin/_navigation.html
@@ -27,14 +27,14 @@
         <li class="docs">
           <a href="#" data-toggle="dropdown" class="dropdown-toggle">Docs<b class="caret"></b></a>
           <ul class="dropdown-menu">
-            <li><span><b>Release</b><span></li>
+            <li class="title"><span><b>Release</b><span></li>
             <li><a href="/docs/0.7.2">0.7.2</a></li>
             <li><a href="/docs/0.7.1">0.7.1</a></li>
             <li><a href="/docs/0.6.2">0.6.2</a></li>
             <li><a href="/docs/0.6.1">0.6.1</a></li>
             <li><a href="documentation.html">Older Versions</a></li>
             <li role="separator" class="divider"></li>
-              <li><span><b>Snapshot&nbsp;(development)</b><span></li>
+              <li class="title"><span><b>Snapshot&nbsp;(development)</b><span></li>
             <li><a href="/docs/0.8.0-SNAPSHOT">0.8.0-SNAPSHOT</a></li>
           </ul>
         </li>
