--- a/assets/themes/zeppelin/css/style.css
+++ b/assets/themes/zeppelin/css/style.css
@@ -773,14 +773,15 @@ a.anchorjs-link:hover { text-decoration: none; }
 }
 
 .newBtn .btn-primary {
-  background: #475a60;
-  color: #ffffff;
+  background: #ecf3f9;
+  color: #060d14;
+  border-color: #438bc9;
 }
 .newBtn .btn-primary:hover, .btn-primary:focus, .btn-primary:active, .btn-primary.active, .open > .dropdown-toggle.btn-primary {
-  background: #333;
+  background: #b3d0e9;
   box-shadow: 0 1px 0 0 rgba(0,0,0,0.1);
   border: 1px solid rgba(0,0,0,0.1);
-  color: #FFFFFF;
+  color: #060d14;
   transition: .1s ease-in;
 }
 .newBtn .btn-primary:active, .btn-primary.active {
