--- a/assets/themes/zeppelin/css/style.css
+++ b/assets/themes/zeppelin/css/style.css
@@ -773,12 +773,12 @@ a.anchorjs-link:hover { text-decoration: none; }
 }
 
 .newBtn .btn-primary {
-  background: #ecf3f9;
+  background: #d9e7f4;
   color: #060d14;
   border-color: #438bc9;
 }
 .newBtn .btn-primary:hover, .btn-primary:focus, .btn-primary:active, .btn-primary.active, .open > .dropdown-toggle.btn-primary {
-  background: #b3d0e9;
+  background: #ecf3f9;
   box-shadow: 0 1px 0 0 rgba(0,0,0,0.1);
   border: 1px solid rgba(0,0,0,0.1);
   color: #060d14;
