change button color

--- a/assets/themes/zeppelin/css/style.css
+++ b/assets/themes/zeppelin/css/style.css
@@ -773,7 +773,7 @@ a.anchorjs-link:hover { text-decoration: none; }
 }
 
 .newBtn .btn-primary {
-  background: #99d6ea;
+  background: #c9e9f3;
   color: #060d14;
   border-color: #0086b3;
 }
