update: 1.Text for Section 1(simple main section)

--- a/_includes/themes/zeppelin/_navigation.html
+++ b/_includes/themes/zeppelin/_navigation.html
@@ -66,7 +66,7 @@
 
 {% if page.title == "Zeppelin" %}
 <div class="jumbotron">
-  <div class="container" style="padding-bottom: 5px;">
+  <div class="container" style="padding-bottom: 5px; margin-top: -15px;">
     <div>
       <div class="zeppelin">
         <div class="zeppelin2"></div>
@@ -75,8 +75,7 @@
     <div style="margin-top: -250px; position: relative;">
       <h1 style="font-size:40px;">Apache Zeppelin</h1>
       <p class="description">
-        A web-based notebook that enables interactive data analytics for
-        data-driven, interactive and collaborative documents with SQL, Scala and more.
+        A web-based notebook that enables interactive data analytics for data-driven
       </p>
     </div>
     <div class="border row">
