resolve: change text-shadow in blue section

--- a/_includes/themes/zeppelin/_navigation.html
+++ b/_includes/themes/zeppelin/_navigation.html
@@ -73,7 +73,7 @@
       </div>
     </div>
     <div style="margin-top: -250px; position: relative;">
-      <h1 style="font-size:40px;">Apache Zeppelin</h1>
+      <h1 style="font-size:40px; text-shadow: 1px 1px #4a4a4a;">Apache Zeppelin</h1>
       <p class="description">
         A web-based notebook that enables interactive data analytics for data-driven
       </p>
