--- a/_includes/themes/zeppelin/_navigation.html
+++ b/_includes/themes/zeppelin/_navigation.html
@@ -75,7 +75,8 @@
     <div style="margin-top: -250px; position: relative;">
       <h1 style="font-size:40px; text-shadow: 1px 1px #4a4a4a;">Apache Zeppelin</h1>
       <p class="description">
-        A web-based notebook that enables interactive data analytics for data-driven
+          A web-based notebook that enables data-driven, <br/>
+          interactive data analytics and collaborative documents with SQL, Scala and more.
       </p>
     </div>
     <div class="border row">
