update: about no.1, remove A

--- a/_includes/themes/zeppelin/_navigation.html
+++ b/_includes/themes/zeppelin/_navigation.html
@@ -75,7 +75,7 @@
     <div style="margin-top: -250px; position: relative;">
       <h1 class="zeppelin-title">Apache Zeppelin</h1>
       <p class="description">
-          A web-based notebook that enables data-driven, <br/>
+          Web-based notebook that enables data-driven, <br/>
           interactive data analytics and collaborative documents with SQL, Scala and more.
       </p>
     </div>
