improve: 3. Can't find favicon.ico.

--- a/_includes/themes/zeppelin/default.html
+++ b/_includes/themes/zeppelin/default.html
@@ -27,6 +27,13 @@
     <link rel="apple-touch-icon" sizes="72x72" href="images/apple-touch-icon-72x72.png">
     <link rel="apple-touch-icon" sizes="114x114" href="images/apple-touch-icon-114x114.png">
     -->
+    <link rel="apple-touch-icon" sizes="180x180" href="{{ ASSET_PATH }}/img/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="{{ ASSET_PATH }}/img/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="{{ ASSET_PATH }}/img/favicon/favicon-16x16.png">
+    <link rel="icon" type="image/png" href="{{ ASSET_PATH }}/img/favicon/favicon.ico">
+    <link rel="manifest" href="{{ ASSET_PATH }}/img/favicon/manifest.json">
+    <link rel="mask-icon" href="{{ ASSET_PATH }}/img/favicon/safari-pinned-tab.svg" color="#438bc9">
+    <meta name="theme-color" content="#ffffff">
 
     <!-- Js -->
     <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
