--- a/docs/assets/themes/zeppelin/css/style.css
+++ b/docs/assets/themes/zeppelin/css/style.css
@@ -119,9 +119,15 @@ body {
 }
 
 .navbar-inverse .navbar-nav > li > a.active:hover,
-.navbar-inverse .navbar-nav > li > a.active:focus {
+.navbar-inverse .navbar-nav > li > a.active:focus,
+. navbar-inverse .navbar-toggle.collapsed:hover {
   text-decoration: none;
   background: #265380;
+}
+
+.navbar-inverse .navbar-toggle.collapsed {
+  border-color: #3071A9;
+  background: #3071a9;
 }
 
 .navbar-inverse .navbar-nav > li > a.active {
