--- a/_includes/themes/zeppelin/_navigation.html
+++ b/_includes/themes/zeppelin/_navigation.html
@@ -82,11 +82,11 @@
     <div class="border row">
       <div class="col-md-12 col-sm-12 col-xs-12 text-center newBtn">
         <a href="/docs/0.8.0-SNAPSHOT/install/install.html" class="btn btn-primary btn-lg" role="button"
-           style="margin:5px 5px 5px 35px;font-size:15px;font-weight:300;font-family:'Roboto', sans-serif;">
+           style="margin:5px 5px 5px 35px;font-size:15px;">
           GET STARTED
         </a>
         <a href="/download.html" class="btn btn-primary btn-lg" role="button"
-           style="margin:5px 5px 5px 35px;font-size:15px;font-weight:300;font-family:'Roboto', sans-serif;">
+           style="margin:5px 5px 5px 35px;font-size:15px;">
           DOWNLOAD
         </a>
       </div>
