--- a/assets/themes/zeppelin/css/style.css
+++ b/assets/themes/zeppelin/css/style.css
@@ -783,6 +783,7 @@ a.anchorjs-link:hover { text-decoration: none; }
   background: #0099cc;
   color: #fff;
   border-color: #0086b3;
+  padding: 11px 29px;
 }
 .newBtn .btn-primary:hover, .btn-primary:focus, .btn-primary:active, .btn-primary.active, .open > .dropdown-toggle.btn-primary {
   background: #33a6cc;
