--- a/_includes/themes/zeppelin/_navigation.html
+++ b/_includes/themes/zeppelin/_navigation.html
@@ -80,7 +80,7 @@
       </p>
     </div>
     <div class="border row">
-      <div class="col-md-12 col-sm-12 col-xs-12 text-center newBtn">
+      <div class="col-md-12 col-sm-12 col-xs-12 text-center newBtn" style="margin-top:8px;">
         <a href="/docs/0.8.0-SNAPSHOT/install/install.html" class="btn btn-primary btn-lg" role="button"
            style="margin:5px 35px 5px 35px;font-size:15px;">
           GET STARTED
