--- a/assets/themes/zeppelin/css/style.css
+++ b/assets/themes/zeppelin/css/style.css
@@ -758,6 +758,7 @@ a.anchorjs-link:hover { text-decoration: none; }
 }
 
 .new h4 {
+  text-align: center;
   font-size: 20px;
   font-weight: 700;
   padding: 18px;
