fix: fitted width of buttons

--- a/assets/themes/zeppelin/css/style.css
+++ b/assets/themes/zeppelin/css/style.css
@@ -785,6 +785,7 @@ a.anchorjs-link:hover { text-decoration: none; }
   color: #fff;
   border-color: #0086b3;
   padding: 11px 29px;
+  min-width: 160px;
 }
 .newBtn .btn-primary:hover, .btn-primary:focus, .btn-primary:active, .btn-primary.active, .open > .dropdown-toggle.btn-primary {
   background: #33a6cc;
