--- a/zeppelin-web/src/app/interpreter/interpreter.html
+++ b/zeppelin-web/src/app/interpreter/interpreter.html
@@ -372,14 +372,14 @@ limitations under the License.
         <div ng-show="setting.option.setPermission" class="permissionsForm">
           <div>
             <p>
-              Enter comma separated users in the fields. <br />
+              Enter comma separated users and groups in the fields. <br />
               Empty field (*) implies anyone can run this interpreter.
             </p>
             <div>
 
             <span class="owners">Owners </span>
-            <select id="{{setting.name}}Users" class="form-control" multiple="multiple" ng-disabled="!valueform.$visible">
-              <option ng-repeat="user in setting.option.users" selected="selected">{{user}}</option>
+            <select id="{{setting.name}}Owners" class="form-control" multiple="multiple" ng-disabled="!valueform.$visible">
+              <option ng-repeat="owner in setting.option.owners" selected="selected">{{owner}}</option>
             </select>
             </div>
           </div>
