add last viewed (recent) notes feature

--- a/zeppelin-web/src/app/home/home.css
+++ b/zeppelin-web/src/app/home/home.css
@@ -115,11 +115,11 @@ body .navbar {
   width: 100%;
 }
 
-#notebook-names {
+.notebook-items {
   list-style: none;
 }
 
-#notebook-names > .filter-names {
+.notebook-items > .filter-names {
   margin: 5px 0;
 }
 
