fix bugs, refactor

--- a/zeppelin-web/src/app/home/home.css
+++ b/zeppelin-web/src/app/home/home.css
@@ -115,12 +115,16 @@ body .navbar {
   width: 100%;
 }
 
-.notebook-items {
+#notebook-names {
   list-style: none;
 }
 
-.notebook-items > .filter-names {
+#notebook-names > .filter-names {
   margin: 5px 0;
+}
+
+#recent-names {
+  list-style: none;
 }
 
 .note-name-query {
