--- a/zeppelin-web/src/app/home/home.html
+++ b/zeppelin-web/src/app/home/home.html
@@ -38,7 +38,7 @@ limitations under the License.
               <i style="font-size: 15px;" class="fa fa-upload"></i> Import note</a></h5>
             <h5 ng-controller="NotenameCtrl as notenamectrl"><a href="" data-toggle="modal" data-target="#noteNameModal" style="text-decoration: none;" ng-click="notenamectrl.getInterpreterSettings()">
               <i style="font-size: 15px;" class="icon-notebook"></i> Create new note</a></h5>
-            <ul class="notebook-items">
+            <ul id="notebook-names">
               <li class="filter-names" ng-include="'components/filterNoteNames/filter-note-names.html'"></li>
               <li ng-repeat="note in home.notes.list | filter:query.q | orderBy:node:false:home.arrayOrderingSrv.noteComparator track by $index">
                 <i style="font-size: 10px;" class="icon-doc"></i>
@@ -59,7 +59,7 @@ limitations under the License.
             <i class="fa fa-eraser notebook-list-btn" ng-click="clearRecent()"></i>
           </h4>
           <div>
-            <ul class="notebook-items">
+            <ul id="recent-names">
               <li ng-repeat="node in home.recentNotes track by $index"
                   ng-include src="'app/home/notebook-template.html'" ng-class="note_folder_renderer"></li>
             </ul>
